[tool.poetry]
name = "bna"
version = "5.0.0"
description = "Blizzard Authenticator and OTP library in Python"
authors = ["Jerome Leclanche <jerome@leclan.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jleclanche/python-bna"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Topic :: Security",
	"Topic :: Security :: Cryptography",

]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
pyotp = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
use-tabs = true

[tool.isort]
indent = "tab"
line_length = 88
balanced_wrapping = true
combine_as_imports = true
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
include_trailing_comma = true
known_first_party = ["bna"]
multi_line_output = 3
