[tool.poetry]
name = "bna"
version = "5.0.2"
description = "Blizzard Authenticator and OTP library in Python"
authors = ["Jerome Leclanche <jerome@leclan.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jleclanche/python-bna"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Topic :: Security",
	"Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
pyotp = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
bna = "bna.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
use-tabs = true

[tool.isort]
profile = "black"
indent = "tab"
