[metadata]
name = bna
version = 4.1.0
description = Battle.net Authenticator and OTP library in Python
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/jleclanche/python-bna/
download_url = https://github.com/jleclanche/python-bna/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Security
	Topic :: Security :: Cryptography


[options]
packages = find:
scripts = bin/bna
