[metadata]
name = bna
version = 4.1.0
description = Blizzard Authenticator and OTP library in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/jleclanche/python-bna/
download_url = https://github.com/jleclanche/python-bna/archive/master.zip
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Security
	Topic :: Security :: Cryptography


[options]
packages = bna
scripts = bin/bna
install_requires =
	click
	pyotp
